assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');

/*----------------------------------------General Page Styles---*/

body {
    background-color: #eaeaea;
}

.header-footer-color {
    background-image: linear-gradient(#006a94 0%, #00387b 100%);
}

.header-footer-text {
    color: #eaeaea;
    font-family: "Titillium Web", sans-serif;
    font-weight: 300;
}

.main-text {
    color: #00387b;
    font-family: "Roboto", sans-serif;
    font-weight: 600;
}

h1 {
    font-size: 4vh;
}

h2 {
    font-size: 3vh;
}

h3 {
    font-size: 2.7vh;
}

h4 {
    font-size: 2.25vh;
}

h5 {
    font-size: 1.5vh;
}

h6 {
    font-size: 1.2vh;
}

button {
    background-image: linear-gradient(#006a94 0%, #00387b 100%);
    color: #BAA571;
    padding: 0.7vh 1vw;
    border: #BAA571 1px solid;
    border-radius: 10px;
    display: block;
}

button:hover {
    background-image: linear-gradient( #f7d994 0%, #BAA571 100%);
    color: #00387b;
    border-color: #00387b;
}

.gold-hover:hover,
.active {
    color: #BAA571;
    text-decoration: none;
}

.shadow-hover:hover {
    color: #BAA571;
    text-shadow: 2px 2px #00387b;
    text-decoration: none;
}

/*----------------------------------------Header---*/

/*-------------------------------Logo---*/

.logo {
    text-align: center;
}

.logo img {
    height: 25vh;
    padding: 2vh;
}

.navbar-toggler {
    border: 1px solid #eaeaea;
    margin: auto;
}

.navbar-toggler-icon {
    color: #eaeaea;
    height: 100%;
}

.navbar-toggler-icon:hover,
.navbar-toggler:hover {
    color: #BAA571;
    border-color: #BAA571;
}

/*-------------------------------Nav Bar---*/

.navbar-nav {
    margin: auto;
    border-top: 1px #BAA571 solid;
    font-size: 2.1vh;
}

.nav-item {
    padding: 1vh 2.5vw;
}

/*----------------------------------------Main---*/

.main {
    position: relative;
    min-height: 50px;
    padding-bottom: 2vh;
    overflow: scroll;
}

/*----------------------------------------Footer---*/

footer {
    position: absolute;
}

.sister-sites {
    padding-top: 2vh;
    text-align: center;
}

.sister-sites img {
    height: 5vh;
}

.sister-sites i {
    font-size: 5vh;
}

/*----------------------------------------About Page---*/

.welcome-container {
    margin-top: 2vh;
}

.committee-container {
    position: relative;
}

.committee-photo {
    width: 100%;
    height: 100%;
    border: #BAA571 1px solid;
    border-radius: 10px;
    opacity: 75%;
}

.welcome-text {
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 2.5vw;
    background-color: rgba(0, 56, 123, 0.5);
    z-index: 2;
    text-align: center;
}

.offers .form-section {
    margin: 2.5vh auto;
}

.offers h2 {
    margin-bottom: 2vh;
    font-weight: 900;
}

.offers h4 {
    padding: 1vh 2vw;
}

.offers a {
    text-decoration: none;
    color: #00387b;
    font-weight: 700;
}

.offers a:hover {
    text-shadow: 1px 1px #BAA571;
}

/*----------------------------------------Sign Up Page---*/

.form-section {
    border: #BAA571 1px solid;
    border-radius: 10px;
    margin: 3vh 1vw;
    padding: 2vh 1vw;
}

.form-section h2 {
    text-align: center;
}

.form-section label {
    padding-top: 1vh;
}

.form-control {
    margin: 0.5vh 0vw;
    max-height: 5vh;
    font-size: 2vh;
}

#mc_embed_signup button,
.center-form button {
    margin: 1vh auto;
    font-size: 3vh;
}

#mc_embed_signup h4 {
    text-align: center;
}

/*--------------------------------Banner---*/

.banner {
    background-image: linear-gradient( #f7d994 0%, #BAA571 100%);
    text-align: center;
    padding: 1.5vh 1vw;
}

.banner h2 {
    padding: 0vh 0vw;
}


/*----------------------------------------Gallery Page---*/


.gallery-photo-container {
    max-height: 115px;
    overflow: hidden;
    margin: 2vh 1vw;
    padding: 0;
    border-radius: 10px;
}

.gallery-photo {
    width: 100%;
    position: relative;
}

.gallery-photo-container:hover {
    border: #BAA571 2px solid;
    
}

.gallery-search {
    text-align: center;
}

/*----------------------------------------Modal---*/

.modal-body {
    padding: 0;
    text-align: center;
    background-color: #eaeaea;
}

.modal img {
    width: 100%;
}

.modal-caption {
    padding: 1.5vh 1vw;
    font-weight: 700;  
}

.modal i {
    padding: 0vh 0.5vw;
}

.arrow {
    position: absolute;
    bottom: 50%;
    opacity: 50%;
}

.previous {
    left: 20px;
}

.next {
    right: 20px;
}

.close {
    height: 2.7vh;
}

/*----------------------------------------Events Page---*/

#photoMap {
    width: 100%;
    height: 60vh;
    margin: auto;
    padding: 2vh 0vw;
}

.events-list {
    padding: 0;
}

.events-list li {
    list-style: none; 
    padding-left: 1.5vw;
}

.collapse img {
    width: inherit;
}

.accordian:hover {
    background-image: linear-gradient( #f7d994 0%, #BAA571 100%);
}

.search-instructions h4 {
    font-weight: 100;
    text-align: center;
    padding-bottom: 2vh;
}

.collapse h4 {
    font-weight: 100;
}

.accordian img {
    border-radius: 10px;
}

/*----------------------------------------Contact Page---*/

.center-form h2 {
    font-weight: bold;
    padding: 0;
    margin: 15px 0;
}

.email-message {
    text-align: center;
    margin-top: 2vh;
}

#query {
    max-height: 20vh;
}

.email-message i {
    font-size: 10vh;
    margin: 4vh 4vw;
}

/*----------------------------------------Media Queries---*/

@media(max-width: 420px) {
    .gallery-photo-container {
        display: contents;
        margin: 0;
        padding: 0;
    }
}

